@startuml DiagClassesClients

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor #000
}


package Entites {
    Client "1" --> "*" Adresse

    class Client {
        + ctor(p_clientId : Guid, p_nom : string, p_prenom : string, p_adresses : IEnumerable<Adresse>)
        + Guid ClientId <<get>> <<private set>>
        + string Nom <<get>> <<private set>>
        + string Prenom <<get>> <<private set>>
        + List<Adresse> Adresses <<get>> <<private set>>
        + AjouterModifierAdresse(p_adresse : Adresse)
    }

    class Adresse {
        + Guid AdresseId <<get>> <<private set>>
        + NumeroCivique : string <<get>> <<private set>>
        + InformationComplementaire : string <<get>> <<private set>>
        + Odonyme : string <<get>> <<private set>>
        + TypeVoie : string <<get>> <<private set>>
        + CodePostal : string <<get>> <<private set>>
        + NomMunicipalite : string <<get>> <<private set>>
        + Etat : string <<get>> <<private set>>
        + Pays : string  <<get>> <<private set>>
    }

    interface IDepotClients {
        + AjouterClient(p_client : Client)
        + ListerClients() : List<Client>
        + RechercherClient(p_clientId : Guid) : Client
        + ModifierClient(p_client : Client)
    }
}

package CoucheAccesDonnees.JSON {
    IDepotClients <|.. DepotClientsJSON
    ClientJSONDTO "1" --> "*" AdresseJSONDTO

    class ClientJSONDTO {
        + Guid ClientId <<get>> <<set>>
        + string Nom <<get>> <<set>>
        + string Prenom <<get>> <<set>>
        + List<AdresseJSONDTO> Adresses <<get>> <<set>>
        + ctor()
        + ctor(p_client : Client)
        + VersEntite() : Client
    }

    class AdresseJSONDTO {
        + Guid AdresseId <<get>> <<set>>
        + NumeroCivique : string <<get>> <<set>>
        + InformationComplementaire : string <<get>> <<set>>
        + Odonyme : string <<get>> <<set>>
        + TypeVoie : string <<get>> <<set>>
        + CodePostal : string <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + Etat : string <<get>> <<set>>
        + Pays : string  <<get>> <<set>>
        + ctor()
        + ctor(p_adresse : Adresse)
        + VersEntite() : Adresse
    }

    class DepotClientsJSON {
        - m_nomFichier : string
        + ctor(p_nomFichier : string)
        + AjouterClient(p_client : Client)
        + ListerClients() : List<Client>
        + RechercherClient(p_clientId : Guid) : Client
        + ModifierClient(p_client : Client)
    }
}

package CoucheAccesDonnees.XML {
    IDepotClients <|.. DepotClientsXML
    ClientXMLDTO "1" --> "*" AdresseXMLDTO

    class ClientXMLDTO {
        + Guid ClientId <<get>> <<set>>
        + string Nom <<get>> <<set>>
        + string Prenom <<get>> <<set>>
        + List<AdresseXMLDTO> Adresses <<get>> <<set>>
        + ctor()
        + ctor(p_client : Client)
        + VersEntite() : Client
    }

    class DepotClientsXML {
        - m_nomFichier : string
        + ctor(p_nomFichier : string)
        + AjouterClient(p_client : Client)
        + ListerClients() : List<Client>
        + RechercherClient(p_clientId : Guid) : Client
        + ModifierClient(p_client : Client)
    }

    class AdresseXMLDTO {
        + Guid AdresseId <<get>> <<set>>
        + NumeroCivique : string <<get>> <<set>>
        + InformationComplementaire : string <<get>> <<set>>
        + Odonyme : string <<get>> <<set>>
        + TypeVoie : string <<get>> <<set>>
        + CodePostal : string <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + Etat : string <<get>> <<set>>
        + Pays : string  <<get>> <<set>>
        + ctor()
        + ctor(p_adresse : Adresse)
        + VersEntite() : Adresse
    }
}

package Application {
    ClientUIConsole "1" --> "1" IDepotClients

    class ClientUIConsole {
        - m_depotClient : IDepotClients
        + ctor(p_depotClient : IDepotClients)
        - AfficherMenu()
        - SaisirChoixMenu() : int
        + ExecuterUI()
        - SaisirClientAvecAdresse() : Client
        - AfficherClient(p_client: Client)
        - RechercherEtAfficherClientParId()
        - ListerEtAfficherClients()
        - GenererAdresseAleatoire() : Adresse
    }
}

package TraitementsLots {
    interface TraitementLot {
        + Executer()
    }
}

package TraitementsLots.ModifierNomPrenomPremiereLettreMajuscules {
    TraitementLot <|.. ModifierNomPrenomPremiereLettreMajusculesTraitementLot
    IDepotClients <-- ModifierNomPrenomPremiereLettreMajusculesTraitementLot

    class ModifierNomPrenomPremiereLettreMajusculesTraitementLot {
        - m_depotClient : IDepotClients
        + ctor(p_depotClient : IDepotClients)
        + Executer()
    }
}

package TraitementsLots.ModifierPaysMajusculesClients {
    TraitementLot <|.. ModifierPaysMajusculesClientsTraitementLot
    IDepotClients <-- ModifierPaysMajusculesClientsTraitementLot

    class ModifierPaysMajusculesClientsTraitementLot {
        - m_depotClient : IDepotClients
        + ctor(p_depotClient : IDepotClients)
        + Executer()
    }
}

' TraitementsLots <.. TraitementsLots.ModifierNomPrenomPremiereLettreMajuscules
' TraitementsLots <.. TraitementsLots.ModifierPaysMajusculesClients

' Entites <.. CoucheAccesDonnees.JSON
' Entites <.. CoucheAccesDonnees.XML
' Entites <.. Application
' Entites <.. TraitementsLots

@enduml